kubernetes/apps/default/stirlingpdf/networkpolicy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: stirlingpdf-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: stirlingpdf
    egress:
      - toFQDNs:
          - matchName: raw.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
